--- a/style.css
+++ b/style.css
@@ -862,12 +862,9 @@ p {
 
 /* 大人的大螢幕 */
 @media (min-width: 1920px) {
-  nav a.vertical {
-    font-size: 10rem; /* 更大字 */
-  }
-
   .about {
     font-size: 13rem;
+    width: 250px;
   }
   .shop {
     font-size: 18rem;
@@ -892,8 +889,8 @@ p {
   }
 
   .info {
-    font-size: 1.3rem;
-    width: 300px;
+    font-size: 1.2rem;
+    width: 20vw;
     max-height: 45vh;
   }
 
