--- a/opencall.css
+++ b/opencall.css
@@ -164,7 +164,10 @@ form {
 }
 @media screen and (max-width: 800px) {
   body {
-    padding: 1.8rem;
+    padding-left: 2rem;
+    padding-bottom: 1rem;
+    padding-right: 1rem;
+    padding-top: 1rem;
   }
   form {
     background-color: whitesmoke;
