font size testing

--- a/opencall.css
+++ b/opencall.css
@@ -168,6 +168,7 @@ form {
     padding-bottom: 1rem;
     padding-right: 1rem;
     padding-top: 1rem;
+    font-size: 0.85rem;
   }
   form {
     background-color: whitesmoke;
