--- a/css/font.css
+++ b/css/font.css
@@ -1,151 +1,151 @@
 @font-face {
   font-family: "Poppins";
-  src: url("font/Poppins-Medium.woff2") format("woff2"),
-    url("font/Poppins-Medium.woff") format("woff");
+  src: url("../font/Poppins-Medium.woff2") format("woff2"),
+    url("../font/Poppins-Medium.woff") format("woff");
   font-weight: 500;
   font-style: normal;
   font-display: swap;
 }
 @font-face {
   font-family: "Poppins";
-  src: url("font/Poppins-MediumItalic.woff2") format("woff2"),
-    url("font/Poppins-MediumItalic.woff") format("woff");
+  src: url("../font/Poppins-MediumItalic.woff2") format("woff2"),
+    url("../font/Poppins-MediumItalic.woff") format("woff");
   font-weight: 500;
   font-style: italic;
   font-display: swap;
 }
 @font-face {
   font-family: "Poppins";
-  src: url("font/Poppins-SemiBold.woff2") format("woff2"),
-    url("font/Poppins-SemiBold.woff") format("woff");
+  src: url("../font/Poppins-SemiBold.woff2") format("woff2"),
+    url("../font/Poppins-SemiBold.woff") format("woff");
   font-weight: 600;
   font-style: normal;
   font-display: swap;
 }
 @font-face {
   font-family: "Poppins";
-  src: url("font/Poppins-Italic.woff2") format("woff2"),
-    url("font/Poppins-Italic.woff") format("woff");
+  src: url("../font/Poppins-Italic.woff2") format("woff2"),
+    url("../font/Poppins-Italic.woff") format("woff");
   font-weight: normal;
   font-style: italic;
   font-display: swap;
 }
 @font-face {
   font-family: "Poppins";
-  src: url("font/Poppins-Thin.woff2") format("woff2"),
-    url("font/Poppins-Thin.woff") format("woff");
+  src: url("../font/Poppins-Thin.woff2") format("woff2"),
+    url("../font/Poppins-Thin.woff") format("woff");
   font-weight: 100;
   font-style: normal;
   font-display: swap;
 }
 @font-face {
   font-family: "Poppins";
-  src: url("font/Poppins-SemiBoldItalic.woff2") format("woff2"),
-    url("font/Poppins-SemiBoldItalic.woff") format("woff");
+  src: url("../font/Poppins-SemiBoldItalic.woff2") format("woff2"),
+    url("../font/Poppins-SemiBoldItalic.woff") format("woff");
   font-weight: 600;
   font-style: italic;
   font-display: swap;
 }
 @font-face {
   font-family: "Poppins";
-  src: url("font/Poppins-LightItalic.woff2") format("woff2"),
-    url("font/Poppins-LightItalic.woff") format("woff");
+  src: url("../font/Poppins-LightItalic.woff2") format("woff2"),
+    url("../font/Poppins-LightItalic.woff") format("woff");
   font-weight: 300;
   font-style: italic;
   font-display: swap;
 }
 @font-face {
   font-family: "Poppins";
-  src: url("font/Poppins-Regular.woff2") format("woff2"),
-    url("font/Poppins-Regular.woff") format("woff");
+  src: url("../font/Poppins-Regular.woff2") format("woff2"),
+    url("../font/Poppins-Regular.woff") format("woff");
   font-weight: normal;
   font-style: normal;
   font-display: swap;
 }
 @font-face {
   font-family: "Poppins";
-  src: url("font/Poppins-ExtraLight.woff2") format("woff2"),
-    url("font/Poppins-ExtraLight.woff") format("woff");
+  src: url("../font/Poppins-ExtraLight.woff2") format("woff2"),
+    url("../font/Poppins-ExtraLight.woff") format("woff");
   font-weight: 200;
   font-style: normal;
   font-display: swap;
 }
 @font-face {
   font-family: "Poppins";
-  src: url("font/Poppins-ExtraLightItalic.woff2") format("woff2"),
-    url("font/Poppins-ExtraLightItalic.woff") format("woff");
+  src: url("../font/Poppins-ExtraLightItalic.woff2") format("woff2"),
+    url("../font/Poppins-ExtraLightItalic.woff") format("woff");
   font-weight: 200;
   font-style: italic;
   font-display: swap;
 }
 @font-face {
   font-family: "Poppins";
-  src: url("font/Poppins-BoldItalic.woff2") format("woff2"),
-    url("font/Poppins-BoldItalic.woff") format("woff");
+  src: url("../font/Poppins-BoldItalic.woff2") format("woff2"),
+    url("../font/Poppins-BoldItalic.woff") format("woff");
   font-weight: bold;
   font-style: italic;
   font-display: swap;
 }
 @font-face {
   font-family: "Poppins";
-  src: url("font/Poppins-Bold.woff2") format("woff2"),
-    url("font/Poppins-Bold.woff") format("woff");
+  src: url("../font/Poppins-Bold.woff2") format("woff2"),
+    url("../font/Poppins-Bold.woff") format("woff");
   font-weight: bold;
   font-style: normal;
   font-display: swap;
 }
 @font-face {
   font-family: "Poppins";
-  src: url("font/Poppins-ThinItalic.woff2") format("woff2"),
-    url("font/Poppins-ThinItalic.woff") format("woff");
+  src: url("../font/Poppins-ThinItalic.woff2") format("woff2"),
+    url("../font/Poppins-ThinItalic.woff") format("woff");
   font-weight: 100;
   font-style: italic;
   font-display: swap;
 }
 @font-face {
   font-family: "Poppins";
-  src: url("font/Poppins-Light.woff2") format("woff2"),
-    url("font/Poppins-Light.woff") format("woff");
+  src: url("../font/Poppins-Light.woff2") format("woff2"),
+    url("../font/Poppins-Light.woff") format("woff");
   font-weight: 300;
   font-style: normal;
   font-display: swap;
 }
 @font-face {
   font-family: "Inclusive Sans";
-  src: url("font/InclusiveSans-Regular.woff2") format("woff2"),
-    url("font/InclusiveSans-Regular.woff") format("woff");
+  src: url("../font/InclusiveSans-Regular.woff2") format("woff2"),
+    url("../font/InclusiveSans-Regular.woff") format("woff");
   font-weight: normal;
   font-style: normal;
   font-display: swap;
 }
 @font-face {
   font-family: "PicNic";
-  src: url("font/PicNic.woff2") format("woff2"),
-    url("font/PicNic.woff") format("woff");
+  src: url("../font/PicNic.woff2") format("woff2"),
+    url("../font/PicNic.woff") format("woff");
   font-weight: normal;
   font-style: normal;
   font-display: swap;
 }
 @font-face {
   font-family: "fungal";
-  src: url("font/Fungal-Grow0Thickness500.woff2") format("woff2"),
-    url("font/Fungal-Grow0Thickness500.woff") format("woff");
+  src: url("../font/Fungal-Grow0Thickness500.woff2") format("woff2"),
+    url("../font/Fungal-Grow0Thickness500.woff") format("woff");
   font-weight: normal;
   font-style: normal;
   font-display: swap;
 }
 @font-face {
   font-family: "fungal-grow";
-  src: url("font/Fungal-Grow100Thickness500.woff2") format("woff2"),
-    url("font/Fungal-Grow100Thickness500.woff") format("woff");
+  src: url("../font/Fungal-Grow100Thickness500.woff2") format("woff2"),
+    url("../font/Fungal-Grow100Thickness500.woff") format("woff");
   font-weight: bold;
   font-style: normal;
   font-display: swap;
 }
 @font-face {
   font-family: "fungal-grow400";
-  src: url("font/Fungal-Grow800Thickness500.woff2") format("woff2"),
-    url("font/Fungal-Grow800Thickness500.woff") format("woff");
+  src: url("../font/Fungal-Grow800Thickness500.woff2") format("woff2"),
+    url("../font/Fungal-Grow800Thickness500.woff") format("woff");
   font-weight: 800;
   font-style: normal;
   font-display: swap;
