--- a/css/dashboard.css
+++ b/css/dashboard.css
@@ -82,6 +82,11 @@ th {
   background-color: ghostwhite;
   width: 55vw;
 }
+.scroll-inner {
+  height: 98vh;
+  overflow-y: auto;
+  overflow-x: hidden;
+}
 .label {
   background: #000;
   color: #fff;
@@ -110,4 +115,31 @@ th {
 }
 .dashed {
   border-style: dashed;
+}
+
+/* -------- 全站 scrollbar 樣式 -------- */
+html {
+  scrollbar-width: thin; /* Firefox */
+  scrollbar-color: olive transparent;
+}
+
+/* Webkit（Chrome, Safari, Edge） */
+body::-webkit-scrollbar,
+html::-webkit-scrollbar {
+  width: 1px;
+}
+body::-webkit-scrollbar-track,
+html::-webkit-scrollbar-track {
+  background: transparent;
+}
+body::-webkit-scrollbar-thumb,
+html::-webkit-scrollbar-thumb {
+  background-color: #aaa;
+  border-radius: 2px;
+  border: 1px solid transparent;
+  background-clip: padding-box;
+}
+body::-webkit-scrollbar-thumb:hover,
+html::-webkit-scrollbar-thumb:hover {
+  background-color: darkolivegreen;
 }
