--- a/css/dashboard.css
+++ b/css/dashboard.css
@@ -1,5 +1,6 @@
 html {
   scroll-behavior: smooth;
+  overflow: hidden;
 }
 
 body {
@@ -9,6 +10,7 @@ body {
   /* background: whitesmoke; */
   position: relative;
   background-color: ghostwhite;
+  overflow: hidden;
 }
 ::selection {
   background-color: olive;
@@ -142,4 +144,35 @@ html::-webkit-scrollbar-thumb {
 body::-webkit-scrollbar-thumb:hover,
 html::-webkit-scrollbar-thumb:hover {
   background-color: darkolivegreen;
+}
+
+.bio {
+  height: 190px;
+  overflow-y: scroll; /* always show vertical scrollbar */
+}
+
+.edit-page {
+  background-color: #f8f8f8;
+  width: 100%;
+  height: 95vh;
+  vertical-align: top;
+}
+.edit-form {
+  max-width: 880px;
+  margin: auto;
+  padding: 2rem 1rem;
+}
+.close-button {
+  position: absolute;
+  top: 1px;
+  right: 10px;
+  line-height: 4rem;
+  font-size: 5rem;
+  font-weight: 100;
+  text-decoration: none;
+  color: black;
+  z-index: 1000;
+}
+.close-button:hover {
+  color: grey;
 }
