--- a/css/dashboard.css
+++ b/css/dashboard.css
@@ -147,7 +147,7 @@ html::-webkit-scrollbar-thumb:hover {
 }
 
 .bio {
-  height: 22vh;
+  /* height: 22vh; */
   line-height: 1.58rem;
   overflow-y: scroll; /* always show vertical scrollbar */
 }
