--- a/css/dashboard.css
+++ b/css/dashboard.css
@@ -240,3 +240,43 @@ html::-webkit-scrollbar-thumb:hover {
     transform: rotate(45deg);
   }
 }
+
+#loading-mask {
+  position: fixed;
+  top: 0;
+  left: 6.5vw;
+  width: 93.5vw;
+  height: 100vh;
+  background: rgba(255, 255, 255, 1);
+  z-index: 9999;
+  overflow: hidden;
+}
+
+.loading-grid {
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  width: 100%;
+  height: 100%;
+  display: grid;
+}
+.loading-grid img {
+  width: 70px;
+  height: 70px;
+  object-fit: cover;
+  box-shadow: 0 0 2px #ccc;
+}
+#loading-percent,
+.loading-percent {
+  position: absolute;
+  right: 2vw;
+  bottom: 2vh;
+  color: ghostwhite;
+  font-size: 1rem;
+  padding: 0.5em 1em;
+  border-radius: 1em;
+  z-index: 10000;
+  pointer-events: none;
+}
