fix: restructure account section in dashboard and update contact information display

--- a/css/dashboard.css
+++ b/css/dashboard.css
@@ -80,6 +80,10 @@ th {
   background-color: aliceblue;
   width: 44vw;
 }
+.account {
+  background-color: aliceblue;
+  width: 99vw;
+}
 .right {
   background-color: ghostwhite;
   width: 55vw;
