--- a/css/dashboard.css
+++ b/css/dashboard.css
@@ -257,6 +257,7 @@ html::-webkit-scrollbar-thumb:hover {
 }
 
 .loading-grid {
+  background-image: url(../image/Cracked_dry_land.jpg);
   position: absolute;
   top: 0;
   left: 0;
@@ -265,6 +266,9 @@ html::-webkit-scrollbar-thumb:hover {
   width: 100%;
   height: 100%;
   display: grid;
+}
+.loading-grid img:not([src]) {
+  display: none;
 }
 .loading-grid img {
   width: 70px;
@@ -334,4 +338,40 @@ html::-webkit-scrollbar-thumb:hover {
 .booth-change:hover .tooltip-text {
   visibility: visible;
   opacity: 1;
+}
+#tictactoe-container {
+  position: fixed;
+  right: 30px;
+  bottom: 30px;
+  max-width: 150px;
+  padding: 1em;
+  z-index: 10001;
+}
+
+.ttt-cell {
+  width: 50px;
+  height: 50px;
+  font-size: 2rem;
+  font-family: inherit;
+  cursor: pointer;
+  background: none;
+  border: none;
+}
+.ttt-cell {
+  border: none;
+  border-right: 1px solid black;
+  border-bottom: 1px solid black;
+}
+.ttt-cell:nth-child(3n) {
+  /* 最右邊 */
+  border-right: none;
+}
+.ttt-cell:nth-child(n + 7) {
+  /* 最下排 */
+  border-bottom: none;
+}
+.ttt-cell:disabled {
+  background: none;
+  color: black;
+  cursor: default;
 }
