feat: enhance dashboard layout and add FAQ page with navigation links

--- a/css/dashboard.css
+++ b/css/dashboard.css
@@ -80,10 +80,44 @@ th {
   background-color: aliceblue;
   width: 44vw;
 }
-.account {
-  background-color: aliceblue;
+.admin {
+  background-color: rgb(254, 221, 214);
   width: 99vw;
+  height: 100vh;
+  overflow-y: scroll !important;
 }
+.admin > div {
+  height: 97vh; /* or any value you prefer */
+  overflow-y: auto;
+  padding-bottom: 3rem;
+}
+.faqtable {
+  z-index: 3;
+}
+h3 {
+  text-align: center;
+  font-family: "PicNic";
+  font-size: 20rem;
+  line-height: 15rem;
+  margin: 0px;
+  color: lime;
+  z-index: -1;
+  position: initial;
+}
+.faq-number {
+  display: inline-block;
+  font-style: italic;
+  text-align: center;
+  color: rgb(184, 254, 151);
+  font-size: 3em;
+  vertical-align: middle;
+}
+.faq-number-cell {
+  vertical-align: top;
+  width: 2.5em;
+  border-right: none !important;
+}
+
 .right {
   background-color: ghostwhite;
   width: 55vw;
@@ -98,6 +132,13 @@ th {
   color: #fff;
   font-size: 0.75rem;
   padding: 2px 6px;
+  display: inline-block;
+}
+.labelAQ {
+  background: lemonchiffon;
+  color: black;
+  font-size: 1.1rem;
+  font-weight: 600;
   display: inline-block;
 }
 .rotated {
@@ -188,6 +229,7 @@ html::-webkit-scrollbar-thumb:hover {
 }
 
 .edit-page {
+  display: none;
   background-color: #f8f8f8;
   width: 100%;
   height: 95vh;
@@ -349,9 +391,9 @@ html::-webkit-scrollbar-thumb:hover {
 }
 
 .ttt-cell {
-  width: 50px;
-  height: 50px;
-  font-size: 2rem;
+  width: 40px;
+  height: 40px;
+  font-size: 1.5rem;
   font-family: inherit;
   cursor: pointer;
   background: none;
