--- a/css/dashboard.css
+++ b/css/dashboard.css
@@ -354,7 +354,7 @@ html::-webkit-scrollbar-thumb:hover {
   height: 1.5em;
   line-height: 1.5em;
   border-radius: 50%;
-  background: lime;
+  background: rgb(0, 157, 255);
   color: #222;
   text-align: center;
   font-size: 1em;
@@ -367,7 +367,7 @@ html::-webkit-scrollbar-thumb:hover {
   visibility: hidden;
   width: max-content;
   max-width: 200px;
-  background: lime;
+  background: rgb(0, 157, 255);
   color: black;
   text-align: left;
   border-radius: 6px;
