--- a/css/dashboard.css
+++ b/css/dashboard.css
@@ -426,6 +426,45 @@ html::-webkit-scrollbar-thumb:hover {
   width: 100%;
 }
 
+.overlay-closed {
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background: rgba(80, 80, 80, 0.7);
+  color: #fff;
+  font-size: 2rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  z-index: 10;
+  pointer-events: all;
+  user-select: none;
+}
+.block-relative {
+  position: relative;
+}
+.overlay-closed {
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background: rgba(80, 80, 80, 0.7);
+  color: #fff;
+  font-size: 2rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  z-index: 10;
+  pointer-events: all;
+  user-select: none;
+}
+.section-class {
+  position: relative;
+}
+
 /* ===== 行動版 Mobile ===== */
 @media screen and (max-width: 600px) {
   html,
