--- a/css/dashboard.css
+++ b/css/dashboard.css
@@ -454,22 +454,14 @@ html::-webkit-scrollbar-thumb:hover {
   background: repeating-linear-gradient(
       to bottom,
       #3e3e3e 0px,
-      #aaa 2px,
-      #3a7d6a 2px,
-      #555 4px,
-      #1e1e1e 6px,
+      #aaa 4px,
+      #3a7d6a 4px,
       #2d2d2d 8px
     ),
-    linear-gradient(
-      to bottom,
-      #dcdcdc 0%,
-      #8a8a8a 40%,
-      #2c2c2c 70%,
-      #0f0f0f 100%
-    );
-  border: 1px solid #555;
-  box-shadow: inset 0 0 12px rgba(0, 0, 0, 0.4);
-  color: #090d0d;
+    linear-gradient(to bottom, #d0d0d0, #0f0f0f);
+  border: 1px solid #777;
+  box-shadow: inset 0 0 8px rgba(0, 0, 0, 0.3);
+  color: rgb(130, 126, 156);
   font-size: 2rem;
   display: flex;
   align-items: center;
@@ -478,6 +470,7 @@ html::-webkit-scrollbar-thumb:hover {
   pointer-events: all;
   user-select: none;
   font-weight: bold;
+  filter: contrast(1.2);
 }
 .section-class {
   position: relative;
