--- a/css/dashboard.css
+++ b/css/dashboard.css
@@ -139,6 +139,8 @@ h3 {
   font-size: 0.75rem;
   padding: 2px 6px;
   display: inline-block;
+  position: relative;
+  z-index: 20;
 }
 .labelAQ {
   background: lemonchiffon;
