--- a/css/dashboard.css
+++ b/css/dashboard.css
@@ -672,7 +672,7 @@ html::-webkit-scrollbar-thumb:hover {
     z-index: 1;
     font-family: "Inclusive Sans", sans serif;
 
-    text-shadow: 1px 1px #4ed9b8, -1px -1px #ffd966;
+    text-shadow: 1px 1px ghostwhite, -1px -1px #ffd966;
   }
   #grass-cursor {
     position: absolute;
