--- a/css/dashboard.css
+++ b/css/dashboard.css
@@ -306,8 +306,8 @@ html::-webkit-scrollbar-thumb:hover {
 }
 
 .billing-note {
-  padding-top: 2px;
-  color: red orange;
+  padding-top: 5px;
+  color: orangered;
   font-size: 0.9rem;
 }
 
