--- a/css/dashboard.css
+++ b/css/dashboard.css
@@ -435,14 +435,23 @@ html::-webkit-scrollbar-thumb:hover {
   width: 100%;
 }
 
-.overlay-closed {
+.overlay-completed {
   position: absolute;
   top: 0;
   left: 0;
   right: 0;
   bottom: 0;
-  background: rgba(80, 80, 80, 0.7);
-  color: #fff;
+  background: repeating-linear-gradient(
+      to bottom,
+      #3e3e3e 0px,
+      #aaa 6px,
+      #3a7d6a 6px,
+      #2d2d2d 9px
+    ),
+    linear-gradient(to bottom, #d0d0d0, #0f0f0f);
+  border: 1px solid #777;
+  box-shadow: inset 0 0 8px rgba(0, 0, 0, 0.4);
+  color: #a2b5b5;
   font-size: 2rem;
   display: flex;
   align-items: center;
@@ -450,6 +459,7 @@ html::-webkit-scrollbar-thumb:hover {
   z-index: 10;
   pointer-events: all;
   user-select: none;
+  font-weight: bold;
 }
 .block-relative {
   position: relative;
