--- a/css/dashboard.css
+++ b/css/dashboard.css
@@ -142,6 +142,7 @@ h3 {
   display: inline-block;
   position: relative;
   z-index: 999;
+  pointer-events: none;
 }
 .labelAQ {
   background: lemonchiffon;
@@ -462,7 +463,7 @@ html::-webkit-scrollbar-thumb:hover {
   user-select: none;
   font-weight: bold;
   transform: translateY(-100%);
-  transition: transform 7s cubic-bezier(0.77, 0, 0.18, 1);
+  transition: transform 5s cubic-bezier(0.77, 0, 0.18, 1);
 }
 
 .overlay-completed.active,
