--- a/css/dashboard.css
+++ b/css/dashboard.css
@@ -502,14 +502,14 @@ html::-webkit-scrollbar-thumb:hover {
 }
 
 .ddl {
-  font-size: 0.8rem;
+  font-size: 0.85rem;
   background-color: #ff6f4c;
   font-family: "Inclusive Sans", sans-serif;
   display: block;
-  margin-left: 0.5em;
-  margin-right: 0.5em;
   margin-top: 1rem;
-  padding: 0.5px;
+  padding: 0.5px 2px;
+  position: absolute;
+  bottom: 1rem;
 }
 
 /* ===== 行動版 Mobile ===== */
